--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
     "build": "webpack --mode production",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
     "server": "nodemon server/index.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "test": "mocha test/test.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
+    "chai": "^4.1.2",
+    "chat": "^0.6.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
+    "mocha": "^5.2.0",
+    "nock": "^9.4.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
@@ -39,7 +44,6 @@
     "babel-preset-react": "^6.24.1",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
-    "chai": "^4.1.2",
     "chart.js": "^2.7.2",
     "concurrently": "^3.6.0",
     "cors": "^2.8.4",
@@ -51,7 +55,6 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "jwt-decode": "^2.2.0",
-    "mocha": "^5.2.0",
     "mongoose": "^5.2.1",
     "nodemon": "^1.17.5",
     "passport": "^0.4.0",
